acvus-mir-test/tests/snapshots/e2e__ssa_context_read_write.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== main ===
     0 |   r0 = ref @x
     1 |   r1 = load r0
     2 |   r2 = ref @x
     4 |   r3 = r1 + 1 (r4)
     5 |   r5 = ref @x
     6 |   store r5 = r3
     7 |   r6 = ref @x
     8 |   return r3

    ; r0 (v9) : Ref<Int>
    ; r1 (v8) : Int
    ; r2 (@x) : Ref<Int>
    ; r3 (v4) : Int
    ; r4 (v3) : Int
    ; r5 (@x) : Ref<Int>
    ; r6 (@x) : Ref<Int>
    ; r7 (v7) : Int
    ; r8 (v2) : Int
