acvus-mir-test/tests/snapshots/e2e__ssa_multiple_contexts_independent.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== main ===
     0 |   r0 = take @a
     1 |   r1 = take @b
     3 |   r2 = r0 + 1 (r3)
     4 |   assign @a = r2
     6 |   r4 = r1 + 2 (r5)
     7 |   assign @b = r4
     8 |   r6 = r2 + r4
     9 |   return r6

    ; r0 (v10) : Int
    ; r1 (v11) : Int
    ; r2 (v3) : Int
    ; r3 (v2) : Int
    ; r4 (v6) : Int
    ; r5 (v5) : Int
    ; r6 (v9) : Int
    ; r7 (@a) : Int
    ; r8 (@a) : Int
    ; r9 (@b) : Int
    ; r10 (@b) : Int
