acvus-mir-test/tests/snapshots/e2e__storage_field_access.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== main ===
     0 │   r0 = storage_load $user
     1 │   r1 = r0.name
     2 │   emit r1

    ; r0 ($user) : {age: Int, email: String, name: String}
    ; r1 (name) : String
