acvus-mir-test/tests/snapshots/e2e__storage_new_ref_binding.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== main ===
     0 │   r0 = storage_load $name
     1 │   storage_store $result = r0
     2 │   r1 = storage_load $result
     3 │   emit r1

    ; r0 ($name) : String
    ; r1 ($result) : String
