acvus-mir-test/tests/snapshots/e2e__storage_new_ref_in_match_arm.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== main ===
     0 │   r0 = storage_load $role
     1 │ L2:
     2 │   r1 = test r0 == "admin"
     3 │   jump_if r1 then L3 else L1
     4 │ L3:
     5 │   r2 = const "yes"
     6 │   storage_store $selected = r2
     7 │   jump L0
     8 │ L1:
     9 │   r3 = const "no"
    10 │   storage_store $selected = r3
    11 │ L0:
    12 │   r4 = storage_load $selected
    13 │   emit r4

    ; r0 ($role) : String
    ; r1 (v1) : Bool
    ; r2 (v2) : String
    ; r3 (v3) : String
    ; r4 ($selected) : String
