acvus-mir-test/tests/snapshots/e2e__storage_write.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== main ===
     0 │   r0 = const 42
     1 │   storage_store $count = r0

    ; r0 (v0) : Int
