acvus-mir-test/tests/snapshots/e2e__string_concat.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== main ===
     0 |   r0 = fetch @hello
     1 |   assign @hello = r0
     2 |   r1 = fetch @world
     3 |   assign @world = r1
     4 |   r2 = ref &@hello
     5 |   r3 = ref &@world
     6 |   r4 = call #0(r2, r3)
     7 |   r5 = string_concat [r4]
     8 |   r6 = take @hello
     9 |   commit @hello = r6
    10 |   r7 = take @world
    11 |   commit @world = r7
    12 |   return r5

    ; r0 (@hello) : String
    ; r1 (@world) : String
    ; r2 (@hello.) : &String
    ; r3 (@world.) : &String
    ; r4 (concat(...)) : String
    ; r5 (v8) : String
    ; r6 (v9) : String
    ; r7 (v10) : String
    ; r8 (@world) : String
    ; r9 (@hello) : String
